tests/ui/single-use-lifetime/zero-uses-in-fn.stderr
error: lifetime parameter `'a` never used
  --> $DIR/zero-uses-in-fn.rs:8:14
   |
LL | fn september<'a>() {}
   |              ^^
   |
note: the lint level is defined here
  --> $DIR/zero-uses-in-fn.rs:5:9
   |
LL | #![deny(unused_lifetimes)]
   |         ^^^^^^^^^^^^^^^^
help: elide the unused lifetime
   |
LL - fn september<'a>() {}
LL + fn september() {}
   |

error: lifetime parameter `'a` never used
  --> $DIR/zero-uses-in-fn.rs:12:12
   |
LL | fn october<'a, 'b, T>(s: &'b T) -> &'b T {
   |            ^^
   |
help: elide the unused lifetime
   |
LL - fn october<'a, 'b, T>(s: &'b T) -> &'b T {
LL + fn october<'b, T>(s: &'b T) -> &'b T {
   |

error: lifetime parameter `'b` never used
  --> $DIR/zero-uses-in-fn.rs:18:17
   |
LL | fn november<'a, 'b>(s: &'a str) -> &'a str {
   |                 ^^
   |
help: elide the unused lifetime
   |
LL - fn november<'a, 'b>(s: &'a str) -> &'a str {
LL + fn november<'a>(s: &'a str) -> &'a str {
   |

error: aborting due to 3 previous errors

